# math-rs

./: .gitignore  Cargo.toml  README.md  SETUP.md
src/: main.rs
src/commands/: session.rs
src/math/: mod.rs  parser.rs  renderer.rs  solver.rs
src/session/: manager.rs  mod.rs
src/utils/: helpers.rs
